--- a/client/CmdLine/index.html
+++ b/client/CmdLine/index.html
@@ -82,7 +82,7 @@ public class ExampleShip extends BasicSpaceship {
 }
 </code></pre>
 <ol>
-<li><p>Be sure to have the <strong>[gson-2.2.jar]({{ site.releasepath }}/gson-2.2.jar)</strong> and <strong>[SpaceBattle.jar]({{ site.releasepath }}/SpaceBattle.jar)</strong> in a known location (e.g. a 'lib' subdirectory).</p>
+<li><p>Be sure to have the <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1127/gson-2.2.jar">gson-2.2.jar</a> and <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1127/SpaceBattle.jar">SpaceBattle.jar</a> in a known location (e.g. a 'lib' subdirectory).</p>
 </li>
 <li><p>Open a Command Prompt.</p>
 </li>
