--- a/lessons/index.html
+++ b/lessons/index.html
@@ -78,7 +78,7 @@
 </tr>
 <tr>
 <td>5 -  8</td>
-<td><a href="shapes.html">Shapes in Space</a></td>
+<td><a href="shapes.html">(Optional) Shapes in Space</a></td>
 </tr>
 <tr>
 <td>9 - 12</td>
@@ -100,16 +100,17 @@
 <p><a href="../games/findthemiddle.html">See Find The Middle Game</a></p>
 <p>Now that students are able to connect, the 3rd day should be spent going over commands (Rotate, Thrust, and Brake) and controlling a ship in space.  This is also a good point to talk about blocking vs. non-blocking commands.</p>
 <p>Then give the students the objective to get their ship from their spawning point to somewhere near the middle of the world.  They can use the parameters given to the register ship method to calculate the mid-point of the universe.  Aim for students to have accomplished this by the end of the next day.</p>
-<h2 id="shapes-in-space-days-5-8"><a name="shapesinspace"></a>Shapes in Space [Days 5 - 8]</h2>
+<h2 id="optional-shapes-in-space-days-5-8"><a name="shapesinspace"></a>(Optional) Shapes in Space [Days 5 - 8]</h2>
 <p><a href="shapes.html">Full Plan</a></p>
 <p>It turns out drawing turtle graphics in space is a lot harder than you would think.  The next exercise teaches students a familiar concept in a whole new way.  Space Battle provides a way to draw shapes on the screen.</p>
 <p>This lesson works towards students getting more comfortable with maneuvering their ship by incrementally learning to draw different shapes such as rectangles, stars, spirals, and an octagon circumscribed around a square.</p>
+<p><em>This is a great callback lesson if you started off with turtle graphics at the start of the year.  However, we recommend skipping it if you did not do turtle graphics previously, unless you're short on time or want to end with the next lesson instead of moving towards a larger more complex competition.  We suggest this as we've found giving students more time to learn Radar earlier sets them up for greater success later.</em></p>
 <h2 id="intro-to-radar-days-9-12"><a name="radar"></a>Intro to Radar [Days 9 - 12]</h2>
 <p><a href="radar.html">Full Plan</a></p>
 <p>Once players are comfortable maneuvering their ships, they need to understand how to <em>see</em> the world around them and react to it.</p>
 <p><strong>Radar</strong> is the way that enables students to get extra information about the world around their ship.</p>
 <p>The first day of this lesson should be about explaining how radar works, what information it provides, and how the programming paradigm changes slightly with having to react in the next getNextCommand call.</p>
-<p>To aid in this activity most of the <a href="../games/basic.html">Basic Games</a> can be configured to provide a challenge and motivation via scoring.</p>
+<p>To aid in this activity most of the <a href="../games/basic.html">Basic Games</a> can be configured to provide a challenge and motivation via scoring.  We suggest <a href="../games/survivor.html">Survivor</a> or <a href="../games/hungryhungrybaubles.html">Hungry Hungry Baubles</a>.</p>
 <h2 id="competitions-days-13"><a name="competitions"></a>Competitions [Days 13+]</h2>
 <p><a href="../games/index.html">Competitions Index</a></p>
 <p>After the lessons preceding this one, students should be comfortable with the system and be able to work on a ship to complete more complex sets of tasks.  This time can be used to introduce a final project where students must complete an objective and compete against their fellow students.</p>
