--- a/lessons/intro.html
+++ b/lessons/intro.html
@@ -77,9 +77,16 @@ number = 2
 </code></pre>
 <h2 id="resources"><a name="resources"></a>Resources</h2>
 <ul>
-<li><a href="../client/index.html">Client Setup</a></li>
-<li><a href="../client/jGRASP/index.html">jGRASP</a></li>
-<li><a href="../client/Eclipse/index.html">Eclipse</a></li>
+<li><a href="../client/index.html">Client Setup</a>
+<ul>
+<li><a href="client/BlueJ/index.html">BlueJ</a></li>
+<li><a href="client/CmdLine/index.html">Command Line</a></li>
+<li><a href="client/Eclipse/index.html">Eclipse</a></li>
+<li><a href="client/jGRASP/index.html">jGRASP</a></li>
+<li><a href="client/vscode/index.html">VS Code</a></li>
+</ul>
+</li>
+<li><a href="client/java_doc/" target="_blank">Java Docs</a></li>
 <li><a href="../server/setup.html">Server Setup</a></li>
 <li><a href="../server/config.html">Server Configuration</a></li>
 </ul>
