--- a/lessons/shapes.html
+++ b/lessons/shapes.html
@@ -57,6 +57,8 @@
         <h1 id="shapes-in-space">Shapes in Space</h1>
 <p>After students can move and stop their ship, it is time to introduce more complex movement patterns and the idea of repetition within the confines of the call/response pattern.</p>
 <p>It turns out drawing turtle graphics in space is a lot harder than you would think.  Space Battle provides <em>'laser nodes'</em> which allow for the drawing of shapes in space.</p>
+<p>This lesson works towards students getting more comfortable with maneuvering their ship by incrementally learning to draw different shapes such as rectangles, stars, spirals, and an octagon circumscribed around a square.</p>
+<p><em>This is a great callback lesson if you started off with turtle graphics at the start of the year.  However, we recommend skipping it if you did not do turtle graphics previously, unless you're short on time or want to end with the next lesson instead of moving towards a larger more complex competition.  We suggest this as we've found giving students more time to learn Radar earlier sets them up for greater success later.</em></p>
 <h2 id="objectives"><a name="objective"></a>Objectives</h2>
 <p>Each student can write multiple ships which draw incrementally more complex shapes:</p>
 <ol>
