--- a/client/Eclipse/index.html
+++ b/client/Eclipse/index.html
@@ -70,7 +70,7 @@
 </li>
 <li><p>Click on <strong>Add External JARs</strong>.</p>
 </li>
-<li><p>Select both the <strong>[gson-2.2.jar]({{ site.releasepath }}/gson-2.2.jar)</strong> and <strong>[SpaceBattle.jar]({{ site.releasepath }}/SpaceBattle.jar)</strong> which you should have downloaded:</p>
+<li><p>Select both the <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1127/gson-2.2.jar">gson-2.2.jar</a> and <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1127/SpaceBattle.jar">SpaceBattle.jar</a> which you should have downloaded:</p>
 <p><img src="NewJavaProjectDialog2.png" class="img-fluid" alt="Libraries Tab" /></p>
 </li>
 <li><p>Click <strong>Finish</strong></p>
