--- a/lessons/radar.html
+++ b/lessons/radar.html
@@ -56,8 +56,14 @@
       <section id="main_content">
         <h1 id="intro-to-radar">Intro to Radar</h1>
 <p>Once players are comfortable maneuvering their ships, they need to understand how to <em>see</em> the world around them and react to it.</p>
-<p>There are two subgames which can help with introducing radar. <a href="../games/asteroidminer.html">Asteroid Miner</a> encourages a more combative stance vs. <a href="../games/survivor.html">Survivor</a> which encourages more avoidance.</p>
+<p>There are three subgames which can help with introducing radar:</p>
+<ul>
+<li><a href="../games/asteroidminer.html">Asteroid Miner</a> encourages a more combative stance</li>
+<li><a href="../games/hungryhungrybaubles.html">Hungry Hungry Baubles</a> encourages exploration</li>
+<li><a href="../games/survivor.html">Survivor</a> which encourages more avoidance.</li>
+</ul>
 <p>Though most of the <a href="../games/basic.html">Basic Games</a> can be configured to provide a challenge and motivation via scoring.</p>
+<p><strong>Be sure to populate the world with enough obstacles to prevent students from just flying straight and hoping they don't hit anything.</strong></p>
 <h2 id="objectives"><a name="objective"></a>Objectives</h2>
 <p>A student can write a ship which can navigate around space by avoiding obstacles and/or destroying them.</p>
 <h2 id="suggested-configuration"><a name="config"></a>Suggested Configuration</h2>
@@ -71,6 +77,7 @@
 <h2 id="resources"><a name="resources"></a>Resources</h2>
 <ul>
 <li><a href="../games/asteroidminer.html">Asteroid Miner</a></li>
+<li><a href="../games/hungryhungrybaubles.html">Hungry Hungry Baubles</a></li>
 <li><a href="../games/survivor.html">Survivor</a></li>
 </ul>
 <h2 id="classroom-notes"><a name="classroom"></a>Classroom Notes</h2>
@@ -79,9 +86,11 @@
 <p>When a RadarCommand is returned in your getNextCommand, the <em>next</em> getNextCommand callback's Environment will contain a RadarResults object which can be retrieved with getRadar().</p>
 <p>The <strong>RadarResults</strong> acts as an ArrayList of ObjectStatus.  It will contain information about all the objects that were around the ship within its <a href="http://mikeware.github.io/SpaceBattleArena/client/java_doc/ihs/apcs/spacebattle/ObjectStatus.html#getRadarRange()">radar range</a>.</p>
 <p>A Radar Command has 5 different modes.  Each mode returns a varying level of information about the types of objects around the ship, but more details require more time to complete.</p>
-<p><strong>It is important</strong> to note that the <em>RadarResults</em> object is not cached, therefore the second call to getNextCommand after a RadarCommand will have a null getRadar() value, unless another RadarCommand was requested.  It is up to the student to decide to cache any information they wish to maintain about the objects in the world longer than a single callback.</p>
+<p><strong>It is important</strong> to note that the <em>RadarResults</em> object is not cached, therefore the second call to getNextCommand after a RadarCommand will have a <strong>null</strong> getRadar() value, unless another RadarCommand was requested.  It is up to the student to decide to cache any information they wish to maintain about the objects in the world longer than a single callback.</p>
+<pre><code>This is the #1 reason we see student's code fail due to a NullPointerException!
+</code></pre>
 <p>Radar is agnostic to the edges of the world; however, the client Point commands return information based on the absolute bounds of the world.  Therefore, an object detected in radar range, may be on the 'other' side of the world.  It is up to the ship to determine if it should head over the boundary of the world to wrap around as the quickest path.</p>
-<p>At this point, starting to learn about advanced commands for maneuvering is important as well as energy management.  Warp and All Stop can be expensive, but critical to passing or avoiding dangerous objects.  Similarly Raise Shields and Torpedoes can be used to protect against collisions or engage other ships.</p>
+<p>At this time, starting to learn about advanced commands for maneuvering is important as well as energy management.  Warp and All Stop can be expensive, but critical to passing or avoiding dangerous objects.  Similarly Raise Shields and Torpedoes can be used to protect against collisions or engage other ships.</p>
 <h2 id="commands-used"><a name="commands"></a>Commands Used</h2>
 <p><a href="http://mikeware.github.io/SpaceBattleArena/client/java_doc/ihs/apcs/spacebattle/commands/RadarCommand.html">RadarCommand</a>, <a href="http://mikeware.github.io/SpaceBattleArena/client/java_doc/ihs/apcs/spacebattle/commands/SteerCommand.html">SteerCommand</a></p>
 <p>Advanced: <a href="http://mikeware.github.io/SpaceBattleArena/client/java_doc/ihs/apcs/spacebattle/commands/WarpCommand.html">WarpCommand</a>, <a href="http://mikeware.github.io/SpaceBattleArena/client/java_doc/ihs/apcs/spacebattle/commands/RaiseShieldsCommand.html">RaiseShieldsCommand</a>, <a href="http://mikeware.github.io/SpaceBattleArena/client/java_doc/ihs/apcs/spacebattle/commands/FireTorpedoCommand.html">FireTorpedoCommand</a>, <a href="http://mikeware.github.io/SpaceBattleArena/client/java_doc/ihs/apcs/spacebattle/commands/AllStopCommand.html">AllStopCommand</a></p>
