[Doc] Update Footer, Add C# Instructions from Community

--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,7 @@
             <li><a href="Eclipse/index.html">Eclipse</a></span>
             <li><a href="jGRASP/index.html">jGRASP</a></span>
             <li><a href="vscode/index.html">VS Code</a></span>
+            <li><a href="vscode/csharp.html">VS Code (CSharp)</a></span>
         </ul>
     </aside>
 
@@ -86,10 +87,10 @@ implements the Spaceship&lt;?&gt; interface.</p>
 		<footer>
 		  <div class="container">
 		    <div class="owner">
-		      <p><a href="https://github.com/Mikeware" class="avatar"><img src="https://avatars3.githubusercontent.com/u/8961203?v=3&s=48" width="48" height="48"/></a> <a href="https://github.com/Mikeware">Mikeware</a> maintains <a href="https://github.com/Mikeware/SpaceBattleArena">Space Battle Arena</a></p>
+		      <p><a href="https://www.mikeware.com/" class="avatar"><img src="https://avatars3.githubusercontent.com/u/8961203?v=3&s=48" width="48" height="48"/></a> <a href="https://github.com/Mikeware">Mikeware</a> maintains <a href="https://github.com/Mikeware/SpaceBattleArena">Space Battle Arena</a></p>
 		    </div>
 		    <div class="creds">
-			  <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a> themes and <a href="http://www.jekyllrb.com/">Jekyll</a>.</small>
+			  <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a> themes and <a href="https://wyam.io/">Wyam</a>.</small>
 		    </div>
 		  </div>
 		</footer>
