--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 <li><a href="client/Eclipse/index.html">Eclipse</a></li>
 <li><a href="client/jGRASP/index.html">jGRASP</a></li>
 <li><a href="client/vscode/index.html">VS Code</a></li>
+<li><a href="client/vscode/csharp.html">VS Code (CSharp)</a> [Community Driven]</li>
 </ul>
 </li>
 <li><a href="client/java_doc/" target="_blank">Java Docs</a></li>
@@ -163,10 +164,10 @@
 		<footer>
 		  <div class="container">
 		    <div class="owner">
-		      <p><a href="https://github.com/Mikeware" class="avatar"><img src="https://avatars3.githubusercontent.com/u/8961203?v=3&s=48" width="48" height="48"/></a> <a href="https://github.com/Mikeware">Mikeware</a> maintains <a href="https://github.com/Mikeware/SpaceBattleArena">Space Battle Arena</a></p>
+		      <p><a href="https://www.mikeware.com/" class="avatar"><img src="https://avatars3.githubusercontent.com/u/8961203?v=3&s=48" width="48" height="48"/></a> <a href="https://github.com/Mikeware">Mikeware</a> maintains <a href="https://github.com/Mikeware/SpaceBattleArena">Space Battle Arena</a></p>
 		    </div>
 		    <div class="creds">
-			  <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a> themes and <a href="http://www.jekyllrb.com/">Jekyll</a>.</small>
+			  <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a> themes and <a href="https://wyam.io/">Wyam</a>.</small>
 		    </div>
 		  </div>
 		</footer>
