--- a/client/vscode/index.html
+++ b/client/vscode/index.html
@@ -95,33 +95,33 @@
 <li><p>Open up the <strong>ExampleShip.java</strong> file under the <strong>src</strong> directory.</p>
 </li>
 <li><p>It should look something like this:</p>
+<pre><code class="language-java"> import java.awt.Color;
+
+ import ihs.apcs.spacebattle.*;
+ import ihs.apcs.spacebattle.commands.*;
+
+ public class ExampleShip extends BasicSpaceship {
+
+ 	public static void main(String[] args)
+ 	{
+ 		TextClient.run(&quot;127.0.0.1&quot;, new ExampleShip());
+ 	}
+
+ 	&#64;Override
+ 	public RegistrationData registerShip(int numImages, int worldWidth, int worldHeight)
+ 	{
+ 		return new RegistrationData(&quot;Example Ship&quot;, new Color(255, 255, 255), 0);
+ 	}
+
+ 	&#64;Override
+ 	public ShipCommand getNextCommand(BasicEnvironment env)
+ 	{
+ 		return new IdleCommand(0.1);
+ 	}
+ }
+</code></pre>
 </li>
 </ol>
-<pre><code>import java.awt.Color;
-
-import ihs.apcs.spacebattle.*;
-import ihs.apcs.spacebattle.commands.*;
-
-public class ExampleShip extends BasicSpaceship {
-	
-    public static void main(String[] args)
-    {
-        TextClient.run("127.0.0.1", new ExampleShip());
-    }
-
-    &#64;Override
-    public RegistrationData registerShip(int numImages, int worldWidth, int worldHeight)
-    {
-        return new RegistrationData("Example Ship", new Color(255, 255, 255), 0);
-    }
-    
-    &#64;Override
-    public ShipCommand getNextCommand(BasicEnvironment env)
-    {
-        return new IdleCommand(0.1);
-    }
-}
-</code></pre>
 <h2 id="execution-instructions"><a name="execution"></a>Execution Instructions</h2>
 <p><strong>Note: Do not terminate the program through the VS Code UI; instead, click in the Terminal window and type 'QUIT' to gracefully close the connection.</strong></p>
 <ol>
