--- a/client/CmdLine/index.html
+++ b/client/CmdLine/index.html
@@ -56,8 +56,9 @@
 <p>This document provides instructions for running ships on the command line using <strong>javac</strong> and <strong>java</strong>.</p>
 <p>These instructions were prepared for Java 1.7 and above.</p>
 <h2 id="initial-setup"><a name="environment"></a>Initial Setup</h2>
-<p>Create a Spaceship class:</p>
-<pre><code>import java.awt.Color;
+<ol>
+<li><p>Create a Spaceship class:</p>
+<pre><code class="language-java">import java.awt.Color;
 
 import ihs.apcs.spacebattle.*;
 import ihs.apcs.spacebattle.commands.*;
@@ -65,15 +66,15 @@ import ihs.apcs.spacebattle.commands.*;
 public class ExampleShip extends BasicSpaceship {
     public static void main(String[] args)
     {
-        TextClient.run("127.0.0.1", new ExampleShip());
+        TextClient.run(&quot;127.0.0.1&quot;, new ExampleShip());
     }
 
     &#64;Override
     public RegistrationData registerShip(int numImages, int worldWidth, int worldHeight)
     {
-        return new RegistrationData("Example Ship", new Color(255, 255, 255), 0);
+        return new RegistrationData(&quot;Example Ship&quot;, new Color(255, 255, 255), 0);
     }
-    
+
     &#64;Override
     public ShipCommand getNextCommand(BasicEnvironment env)
     {
@@ -81,7 +82,7 @@ public class ExampleShip extends BasicSpaceship {
     }
 }
 </code></pre>
-<ol>
+</li>
 <li><p>Be sure to have the <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1127/gson-2.2.jar">gson-2.2.jar</a> and <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1127/SpaceBattle.jar">SpaceBattle.jar</a> in a known location (e.g. a 'lib' subdirectory).</p>
 </li>
 <li><p>Open a Command Prompt.</p>
@@ -91,12 +92,12 @@ public class ExampleShip extends BasicSpaceship {
 <p><strong>Note: Do not terminate the program with Ctrl+C; instead, type 'QUIT' to gracefully close the connection.</strong></p>
 <ol>
 <li><p>Compile your code with the following command:</p>
- <pre><code>javac -cp lib\SpaceBattle.jar;lib\gson-2.2.jar ExampleShip.java
- </code></pre>
+<pre><code class="language-bash">javac -cp lib\SpaceBattle.jar;lib\gson-2.2.jar ExampleShip.java
+</code></pre>
 </li>
 <li><p>Run your code with the following command:</p>
- <pre><code>java -cp lib\SpaceBattle.jar;lib\gson-2.2.jar;. ExampleShip
- </code></pre>
+<pre><code class="language-bash">java -cp lib\SpaceBattle.jar;lib\gson-2.2.jar;. ExampleShip
+</code></pre>
 <p>Note: the addition of the ';.' this is to represent the location of your compiled class file.</p>
 </li>
 <li><p>Type 'QUIT' in the console window to disconnect your ship.</p>
