[Doc] Add info about new tournament and sponsorship

--- a/games/basic.html
+++ b/games/basic.html
@@ -27,6 +27,7 @@
           <a href="/SpaceBattleArena/client/java_doc/" class="btn">Java Docs</a>
           <a href="https://github.com/Mikeware/SpaceBattleArena/releases/download/v1.2.0.1127/SBAserver.zip" class="btn">Download Server (Windows)</a>
           <a href="https://www.github.com/Mikeware/SpaceBattleArena" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a style="position: relative; top: 6px;" href="https://github.com/sponsors/hawkerm"><img src="https://img.shields.io/static/v1?label=Sponsor&message=%E2%9D%A4&logo=GitHub"/></a>
         </section>
       </div>
     </header>
@@ -68,7 +69,8 @@
 		<footer>
 		  <div class="container">
 		    <div class="owner">
-		      <p><a href="https://www.mikeware.com/" class="avatar"><img src="https://avatars3.githubusercontent.com/u/8961203?v=3&s=48" width="48" height="48"/></a> <a href="https://github.com/Mikeware">Mikeware</a> maintains <a href="https://github.com/Mikeware/SpaceBattleArena">Space Battle Arena</a></p>
+		      <p><a href="https://www.mikeware.com/" class="avatar"><img src="https://avatars3.githubusercontent.com/u/8961203?v=3&s=48" width="48" height="48"/></a></p>
+			  <p style="margin: -16px 0px 0px 0px;"><a href="https://github.com/Mikeware">Mikeware</a> maintains <a href="https://github.com/Mikeware/SpaceBattleArena">Space Battle Arena</a><br/><a href="https://github.com/sponsors/hawkerm"><img src="https://img.shields.io/static/v1?label=Sponsor&message=%E2%9D%A4&logo=GitHub"/></a></p>
 		    </div>
 		    <div class="creds">
 			  <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a> themes and <a href="https://wyam.io/">Wyam</a>.</small>
